@@ -1,6 +1,7 @@
 rkward (0.5.6z+0.5.7-0devel1) unstable; urgency=low
 
   * new upstream release
+  * include buildflags as instructed by the dpkg developers
 
  -- Thomas Friedrichsmeier <tfry@users.sourceforge.net>  Tue, 30 May 2011 15:30:00 +0200
 
